             this direction
	Outbound messages are no longer type 'admin' but are of the
	     appropriate message type (i.e. 'zephyr') and are direction
	     'out'.
	Smartnarrow now works on outgoing messages
	'info' updated to show more information for admin and outgoing
	     messages
	Renamed pretty_sender to short_zuser and renamed long_sender to
             long_zuser
	
1.2.2
	Added the 'search' command.
	'/' is a keybinding for 'search'
	'?' is a keybinding for 'search -r'
	Fixed stristr, which was completely broken
	renamed owl_fmtext_ztext_stylestrip to owl_function_ztext_styletsrip
	     and put it in functions.c
	Attempts to stay near the current message when switching views.
	     When switching from an empty view to one we've previously
	     been in, the new current message position will attempt
	     to be close to the current position from the last 
	     time we visited that view.
	Fixed bug in readconfig.c that prevented building under perl 5.005.
	Switched "C-x C-x" to only "startcommand quit"
	'getsubs' prints closer to the order you sub in.
	Modified the behavior of last so that "> >" will clear the screen.
	The new behavior of last is:
	      Moves the pointer to the last message in the view.
	      If we are already at the last message in the view,
	      blanks the screen and moves just past the end of the view
	      so that new messages will appear starting at the top
	      of the screen.
	Fixed a typo in the help for smartzpunt.
	Fixed functions to handle curmsg being past the end of the view.

1.2.1
        New framework for command handling.
        New framework for keymap handling.
        Added commands for everything that is bound 
             to a key (do 'show commands' to get the full list).
        Added 'multi' and '(' commands to allow multiple commands
             to be specified on a line.              
        Added user keybindings with bindkey command.
        Added command aliases (eg, "alias foo bar").